--- a/ToDo-List-v2-Database/views/list.ejs
+++ b/ToDo-List-v2-Database/views/list.ejs
@@ -1,41 +1,29 @@
-<!-- <!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>To Do List</title>
-    <link rel="stylesheet" href="css/styles.css">
-</head>
-
-<body> -->
-
-    <%- include("header") -%>
+<%- include("header") -%>
 
     <div class="box" id="heading">
-        <h1><%= listTitle %></h1>
+        <h1>
+            <%= listTitle %>
+        </h1>
     </div>
 
     <div class="box">
-        <% for (var i=0; i<newListItems.length; i++) { %>
-        <div class="item">
-            <input type="checkbox">
-            <p> <%= newListItems[i] %> </p>
-        </div>
-        <% } %>
-        <!-- 2nd for loop loops through the entire lenght of the array and renders a new li for each item inside the array -->
 
-        <form class="item" action="/" method="post">
-            <!-- when submit button clicked, form makes post request to the home route and post "newItem" -->
-            <input type="text" name="newItem" placeholder="New Item" autocomplete="off">
-            <button type="submit" name="list" value=<%= listTitle%>>+</button>
-        </form>
-        <!-- 3rd when the user adds a new item, it gets saved as "newItem" and we trigger a post request to the home route -->
+        <% newListItems.forEach(function(item){ %>
+            <form action="/delete" method="post">
+                <div class="item">
+                    <input type="checkbox" name="checkbox" value="<%=item._id%>" onChange="this.form.submit()">
+                    <p>
+                        <%= item.name %>
+                    </p>
+                </div>
+                <input type="hidden" name="listName" value="<%= listTitle %>">
+            </form>
+            <% }); %>
+
+                <form class="item" action="/" method="post">
+                    <input type="text" name="newItem" placeholder="New Item" autocomplete="off">
+                    <button type="submit" name="list" value="<%= listTitle %>">+</button>
+                </form>
     </div>
 
     <%- include("footer") -%>
-<!-- 
-</body>
-
-</html> -->
