--- a/Blog_Project/views/home.ejs
+++ b/Blog_Project/views/home.ejs
@@ -5,25 +5,17 @@
     <%= startingContent %>
   </p>
 
-  <%# console.log(posts); %>
 
-    <%# for (var i=0; i<posts.length; i++) { %>
-      <%# console.log(posts[i].title); %>
-        <%# } %>
-          <!-- we are substituting it with a forEach -->
 
-          <%# posts.forEach(function(post) { %>
-            <%# console.log("foreach: " + post.title); %>
-<%# }); %>
-<!-- now we want to render this in the home page -->
-
-<% posts.forEach(function(post) { %>
-     <h1><%=post.title%></h1>
+  <% posts.forEach(function(post) { %>
+    <h1>
+      <%=post.title%>
+    </h1>
     <p>
-      <%=post.content.substring(0, 100) + " ..."%>
-              <a href="/posts/<%=post._id%>">Read More</a>
-              </p>
+      <%=post.content.substring(0, 100) + " ..." %>
+        <a href="/posts/<%=post._id%>">Read More</a>
+    </p>
 
-              <% }); %>
+    <% }); %>
 
-                <%- include("partials/footer") -%>
+      <%- include("partials/footer") -%>
