--- a/Blog_Project/views/partials/footer.ejs
+++ b/Blog_Project/views/partials/footer.ejs
@@ -1,9 +1,9 @@
-
 </div>
 <div class="footer-padding"></div>
-  <div class="footer">
-    <p><a href="https://github.com/SalomeMM"><u>github.com/SalomeMM</u></a></p>
-  </div>
+<div class="footer">
+  <p><a href="https://github.com/Khald1998"><u>github.com/Khald1998</u></a></p>
+</div>
 </div>
 </body>
+
 </html>
